# minesweeper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: board.cpp  board.h  board_image.cpp  board_image.h  main.cpp  raw_test_data.h  test_suite.cpp  test_suite.h  test_suite_gen.cpp  test_suite_gen.h  types.h
src/solver/: augmented_matrix.cpp  augmented_matrix.h  linear_system.h  solver.cpp  solver.h  system_builder.h
src/solvers/: basic_optimized.h  brute_force.h  solution.h  solution_info.h
src/util/: bitset.h  static_vector.h
